# k8s-mcp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  server.py  test_server.py
